[package]
name = "blog_generator"
version = "0.1.0"
edition = "2021"
authors = ["SF-Zhou <sfzhou.scut@gmail.com>"]
description = "A static blog generator that converts Markdown to HTML with syntax highlighting and math formula support"
license = "MIT"

[dependencies]
# Markdown parsing
pulldown-cmark = { version = "0.9", features = ["simd"] }

# Syntax highlighting
syntect = "5.2"

# Math formula rendering
katex = "0.4"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Template rendering
mustache = "0.9"

# File system operations
walkdir = "2.4"

# Date handling
chrono = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Regex for parsing
regex = "1.10"

# URL encoding
percent-encoding = "2.3"

# XML escaping for RSS
quick-xml = "0.31"

[[bin]]
name = "blog-generator"
path = "src/main.rs"
